Fix: fixing card alignment with grid

--- a/css/metrics.scss
+++ b/css/metrics.scss
@@ -5,9 +5,14 @@
   grid-template-columns: repeat(auto-fill, minmax(262px, 1fr));
   column-gap: 32px;
   row-gap: 32px;
+
+  justify-content: space-evenly;
+  justify-items: center;
+
 }
 
 .card{
+
   position: relative;
 
   padding: 20px;
@@ -75,6 +80,24 @@
     font-size: 12px;
 
     color: #9D9FA1;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .card{
+    width: 280px;
+    height: 132px;
+    padding: 12px 16px;
+
+    &__amount{
+      margin-bottom: 26px;
+    }
+  }
+
+  .metrics{
+    grid-template-columns: 280px 280px;
+    column-gap: 16px;
+    row-gap: 16px;
   }
 }
 
